# sgx4ml

./: README.md
CPP_Intel_SDK/: CMakeLists.txt  README.md
CPP_Intel_SDK/App/: App.cpp  Config.hpp.in  EnclaveBenchmarks.hpp  ExperimentHelpers.hpp  NumpyArrayHelpers.hpp  OCalls.cpp  SGXErrors.hpp  Timers.hpp  UnsafeBenchmarks.hpp
CPP_Intel_SDK/Enclave/: Enclave.config.big.xml  Enclave.config.small.xml  Enclave.cpp  Enclave.edl  neural_network_inference.cpp
CPP_Intel_SDK/benchmark-results/: 32threads.csv  32threads.py  analysis_plot_functions.py  batch_scaling.csv  batch_scaling.py  freq_fixed_2023_client.csv  freq_fixed_2023_scalable.csv  helper_functions.py  medium_large_mlp_pytorch_client.csv  medium_large_mlp_pytorch_scalable.csv  pytorch_client.csv  pytorch_scalable_2.csv  rerun_2023_client.csv  rerun_2023_scalable.csv  single_net_analysis_dnnl.py  theme_bw.mplstyle
CPP_Intel_SDK/benchmark-results/BTW-Paper/: alexnet_client.csv  alexnet_scalable.csv  btw_paper_analysis.py  freq_fixed_client_2.csv  freq_fixed_client_vgg19.csv  freq_fixed_scalable_2.csv  freq_fixed_scalable_vgg19.csv  freq_fixed_scalable_vgg19_32.csv
CPP_Intel_SDK/cmake/: FindSGX.cmake  MNISTConfig.cmake  NPYConfig.cmake  SGXDNNLConfig.cmake
CPP_Intel_SDK/shared/: BatchedDataset.hpp  MiscFunctions.hpp  NeuralNetworkFactories.hpp  NumpyArray.hpp
Python_Gramine/: Inference_exp_new.py  README.md  create_models.py  exp.sh  pytorch.manifest.template  requirements.txt  result_file_gen.py
Python_Gramine/models/: ALEXNET_model.py  ALEXNET_simple.py  CNN_FashionMNIST_model.py  Large_MLP1.py  Large_MLP2.py  MLP_FashionMNIST_model.py  cnn_new.py
Python_Gramine/old_files/: CNN_FashionMNIST.ipynb  CNN_FashionMNIST_inference.py  CNN_FashionMNIST_train.py  FashionMNIST_data.py  Inference_emp.py  Inference_sgx.py  MLP_FashionMNIST.ipynb  MLP_FashionMNIST_inference.py  MLP_FashionMNIST_train.py  VGG16_model.py  VGG19_model.py  models_exp.ipynb  plots.ipynb  timings
Python_Gramine/old_files/results_1/: result.csv  training_cnn_1.csv  training_cnn_1024.csv  training_cnn_16.csv  training_mlp_1.csv  training_mlp_1024.csv  training_mlp_16.csv
Python_Gramine/old_files/results_16/: result.csv  training_cnn_1.csv  (+5 more)
(+32 files in other folders)
